--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "libmorton"]
 	path = libmorton
-	url = git@github.com:Forceflow/libmorton.git
+	url = git@github.com:Wehrdo/libmorton.git 
