--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
 [submodule "libmorton"]
 	path = libmorton
 	url = git@github.com:Wehrdo/libmorton.git 
+[submodule "cub"]
+	path = cub
+	url = https://github.com/NVlabs/cub.git
+	branch = 1.8.0
