Successfully making radix tree

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.8 FATAL_ERROR)
 project(shapes LANGUAGES CXX CUDA)
 
-file(GLOB shapes_sources ./src/*.cpp ./src/*.cu ./src/*.hpp)
+file(GLOB shapes_sources ./src/*.cpp ./src/*.cu ./src/*.hpp ./src/*.cuh)
 list(REMOVE_ITEM shapes_sources "main.cu")
 
 add_executable(shapes ${shapes_sources})
@@ -15,6 +15,7 @@ target_compile_features(shapes PUBLIC cxx_std_14)
 
 set_target_properties(shapes PROPERTIES POSITION_INDEPENDENT_CODE ON)
 set(CMAKE_CUDA_FLAGS "-arch=sm_61 --expt-relaxed-constexpr")
+set(CMAKE_CUDA_FLAGS_DEBUG "-g -G")
 
 # We need to explicitly state that we need all CUDA files in the 
 # particle library to be built with -dc as the member functions 
