Estimating normals. Seems a little off, though.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,6 @@
 cmake_minimum_required(VERSION 3.8 FATAL_ERROR)
 project(shapes LANGUAGES CXX CUDA)
+set(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake_modules)
 
 file(GLOB shapes_sources ./src/*.cpp ./src/*.cu ./src/*.hpp)
 list(REMOVE_ITEM shapes_sources "main.cu")
@@ -13,7 +14,7 @@ target_include_directories(shapes PRIVATE cub)
 # will also build with -std=c++14
 target_compile_features(shapes PUBLIC cxx_std_14)
 
-set_target_properties(shapes PROPERTIES POSITION_INDEPENDENT_CODE ON)
+# set_target_properties(shapes PROPERTIES POSITION_INDEPENDENT_CODE ON)
 set(CMAKE_CUDA_FLAGS "-arch=sm_61 --expt-relaxed-constexpr")
 # Device debug info in debug mode
 set(CMAKE_CUDA_FLAGS_DEBUG "-g -G")
@@ -29,3 +30,26 @@ if(APPLE)
   # so that the static cuda runtime can find it at runtime.
   set_property(TARGET shapes PROPERTY BUILD_RPATH ${CMAKE_CUDA_IMPLICIT_LINK_DIRECTORIES})
 endif()
+
+# OpenMP required for cuSolver
+find_package(OpenMp)
+if (OPENMP_FOUND)
+  set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
+  set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
+  set (CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
+endif()
+
+find_package(CUDALibs REQUIRED)
+# Link cuSolver and cuBLAS
+# target_link_libraries(shapes ${CUDA_cusolver_LIBRARY} ${CUDA_CUBLAS_LIBRARIES})
+# message(STATUS, ${CUDA_cusolver_LIBRARY})
+# message(STATUS, ${CUDA_CUBLAS_LIBRARIES})
+# find_library(CUBLAS_LIB cublas HINT ${CMAKE_CUDA_IMPLICIT_LINK_DIRECTORIES})
+# message(STATUS, ${CUBLAS_LIB})
+# target_link_libraries(shapes, cublas)
+# cuda_add_cublas_to_target(shapes)
+# target_link_libraries(shapes ${CUDA_cublas_LIBRARY} ${CUDA_cublas_device_LIBRARY})
+target_link_libraries(shapes ${CUDA_cublas_LIBRARY})
+target_link_libraries(shapes ${CUDA_cusolver_LIBRARY})
+
+list(APPEND CUDA_NVCC_FLAGS -lcublas_device)
