--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,7 +39,7 @@ endif()
 find_package(MPI REQUIRED)
 set(CMAKE_CXX_COMPILE_FLAGS ${CMAKE_CXX_COMPILE_FLAGS} ${MPI_COMPILE_FLAGS})
 set(CMAKE_CXX_LINK_FLAGS ${CMAKE_CXX_LINK_FLAGS} ${MPI_LINK_FLAGS})
-include_directories(MPI_INCLUDE_PATH)
+target_include_directories(shapes PRIVATE ${MPI_CXX_INCLUDE_DIRS})
 target_link_libraries(shapes ${MPI_LIBRARIES}) 
 
 # OpenMP required for cuSolver
